# app/Models/Family.php
@@ -4,6 +4,7 @@ namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class Family extends Model
 {
@@ -11,12 +12,12 @@ class Family extends Model
 
     protected $fillable = ["character_id", "familiar_id", "relationship"];
 
-    public function character(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    public function character(): BelongsTo
     {
         return $this->belongsTo(Character::class);
     }
 
-    public function familiar(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    public function familiar(): BelongsTo
     {
         return $this->belongsTo(Character::class);
     }
